refactor(employee): Remove duplicate name/email fields, require user link
- Removed name and email from Employee entity (now from User)
- Made user_id required and NOT NULL
- Updated DTOs and controllers accordingly
- Eliminated data redundancy and inconsistency risks